--- a/changelog
+++ b/changelog
@@ -1,3 +1,28 @@
+turnkey-lamp-14.0 (1) turnkey; urgency=low
+
+  * Latest Debian Jessie package versions of all components.
+
+  * Added Adminer: 
+
+    - replaces PHPMyAdmin.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Thu, 10 Oct 2013 18:11:08 +0300
+
+turnkey-lamp-12.1 (1) turnkey; urgency=low
+
+  * Added useful PHP5 development aids:
+
+    - phpsh: interactive shell
+    - php5-cli: command-line interpreter
+    - php5-xdebug: debugging on profiling
+    - php-pear: php extension and application repository
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
 turnkey-lamp-13.0 (1) turnkey; urgency=low
 
   * Latest Debian Wheezy package versions of all components.
