--- a/changelog
+++ b/changelog
@@ -9,19 +9,7 @@ turnkey-lamp-14.0 (1) turnkey; urgency=low
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Alon Swartz <alon@turnkeylinux.org>  Thu, 10 Oct 2013 18:11:08 +0300
-
-turnkey-lamp-12.1 (1) turnkey; urgency=low
-
-  * Added useful PHP5 development aids:
-
-    - phpsh: interactive shell
-    - php5-cli: command-line interpreter
-    - php5-xdebug: debugging on profiling
-    - php-pear: php extension and application repository
-
-  * Note: Please refer to turnkey-core's changelog for changes common to all
-    appliances. Here we only describe changes specific to this appliance.
+ -- TurnKey Release Team <release@turnkeylinux.org>  Sat, 16 May 2014 14:22:08 +1000
 
 turnkey-lamp-13.0 (1) turnkey; urgency=low
 
