--- a/changelog
+++ b/changelog
@@ -9,7 +9,7 @@ turnkey-lamp-14.0 (1) turnkey; urgency=low
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- TurnKey Release Team <release@turnkeylinux.org>  Sat, 16 May 2014 14:22:08 +1000
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Sat, 16 May 2014 14:22:08 +1000
 
 turnkey-lamp-13.0 (1) turnkey; urgency=low
 
