--- a/changelog
+++ b/changelog
@@ -6,6 +6,10 @@ turnkey-lamp-14.0 (1) turnkey; urgency=low
 
     - replaces PHPMyAdmin.
 
+  * Replaced PHPMyAdmin with Adminer
+
+  * Hardened default SSL settings
+
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
