--- a/changelog
+++ b/changelog
@@ -2,9 +2,9 @@ turnkey-lamp-14.0 (1) turnkey; urgency=low
 
   * Latest Debian Jessie package versions of all components.
 
-  * Added Adminer: 
+  * Replaced PHPMyAdmin with Adminer
 
-    - replaces PHPMyAdmin.
+  * Hardened default SSL settings
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
