--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+turnkey-lamp-14.2 (1) turnkey; urgency=low
+
+  * Updated Adminer to 4.2.5
+
+  * Installed security updates.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Wed, 19 Apr 2017 12:15:04 +1000
+
 turnkey-lamp-14.1 (1) turnkey; urgency=low
 
   * Installed security updates.
