--- a/changelog
+++ b/changelog
@@ -2,12 +2,22 @@ turnkey-lamp-15.0 (1) turnkey; urgency=low
 
   * Install Adminer directly from stretch/main repo
 
-  * Replaces MySQL with MariaDB
+  * Provide "adminer" root-like user for Adminer MySQL access
+
+  * Replace MySQL with MariaDB (drop-in MySQL replacement)
+
+  * Updated version of mysqltuner script
+
+  * Includes PHP7.0 (installed from Debian repos)
+
+  * Updated PHP default settings
+
+  * Remove phpsh (no longer maintained)
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Stefan Davis <stefan@turnkeylinux.org>  Thu, 09 Nov 2017 22:18:50 +1100
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Tue, 19 Jun 2018 13:03:41 +1000
 
 turnkey-lamp-14.2 (1) turnkey; urgency=low
 
