--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+turnkey-lamp-15.1 (1) turnkey; urgency=low
+
+  * Rebuild to resolve inadvertant removal of mariadb during sec-updates
+    - part of #1246.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Wed, 21 Nov 2018 18:29:42 +1100
+
 turnkey-lamp-15.0 (1) turnkey; urgency=low
 
   * Install Adminer directly from stretch/main repo
