--- a/changelog
+++ b/changelog
@@ -1,3 +1,26 @@
+turnkey-lamp-16.0 (1) turnkey; urgency=low
+
+  * Explcitly disable TLS<1.2 (i.e. SSLv3, TLSv1, TLSv1.1). (v15.x
+    TurnKey releases supported TLS 1.2, but could fallback as low as TLSv1).
+
+  * Update SSL/TLS cyphers to provide "Intermediate" browser/client support
+    (suitable for "General-purpose servers with a variety of clients,
+    recommended for almost all systems"). As provided by Mozilla via
+    https://ssl-config.mozilla.org/.
+
+  * Updated all relevant Debian packages to Buster/10 versions; including
+    PHP 7.3.
+
+  * Updated version of mysqltuner script - now installed as per upstream
+    recommendation.
+
+  * Includes PHP7.3 (installed from Debian repos).
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 23 Apr 2020 04:38:26 +0000
+
 turnkey-lamp-15.1 (1) turnkey; urgency=low
 
   * Rebuild to resolve inadvertant removal of mariadb during sec-updates
