--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+turnkey-lamp-16.1 (1) turnkey; urgency=low
+
+  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
+    all appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Wed, 10 Feb 2021 14:56:17 +1100
+
 turnkey-lamp-16.0 (1) turnkey; urgency=low
 
   * Explcitly disable TLS<1.2 (i.e. SSLv3, TLSv1, TLSv1.1). (v15.x
