--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+turnkey-lamp-17.1 (1) turnkey; urgency=low
+
+  * Updated all Debian packages to latest.
+    [ autopatched by buildtasks ]
+
+  * Patched bugfix release. Closes #1734.
+    [ autopatched by buildtasks ]
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Tue, 12 May 2022 01:41:55 +0000
+
 turnkey-lamp-17.0 (1) turnkey; urgency=low
 
   * Updated all relevant Debian packages to Bullseye/11 versions; including
